--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Jost:wght@100;400;500;700&display=swap");
-@import "./pages/Home/Home.css";
-@import "./pages/Designs/Designs.css";
-@import "./pages/About/About.css";
-@import "./pages/Location/Location.css";
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@100;400;500;700&display=swap');
+@import './pages/Home/Home.css';
+@import './pages/Designs/Designs.css';
+@import './pages/About/About.css';
+@import './pages/Location/Location.css';
 
 * {
   margin: 0;
@@ -17,7 +17,7 @@ body {
 }
 :root {
   --Hover: #ffad9b;
-  --Nav-Jost-Font-Family: "Jost", sans-serif;
+  --Nav-Jost-Font-Family: 'Jost', sans-serif;
   --Letter-Spacing: 5px;
   --Background-Color: #f2f2f2;
   --Hero-Background-Color: #e7816b;
@@ -477,21 +477,10 @@ a {
     padding: 50px 10px;
   }
 }
-/* .footer {
-  background: #1d1c1e;
-  width: 100%;
-  height: auto;
-  margin-top: 400px;
-}
 
-.footer-container {
-  max-width: 1400px;
-  padding: 100px 0;
-  margin: 0 auto;
+/* Leaflet css */
+
+.leaflet-container {
   width: 100%;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-} */
+  height: 100%;
+}
