--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -233,6 +233,7 @@
   height: 640px;
   width: 100%;
   margin-right: 1rem;
+  overflow: hidden;
 }
 
 .col-right {
@@ -241,6 +242,7 @@
   flex-direction: column;
   height: 640px;
   margin-left: 1rem;
+  overflow: hidden;
 }
 
 .app-designs,
