Added full section scroll animation and also start works on the contact page

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @import './pages/Designs/Designs.css';
 @import './pages/About/About.css';
 @import './pages/Location/Location.css';
+@import './pages/Contact/Contact.css';
 
 * {
   margin: 0;
