--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,4 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Jost:wght@100;400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@100;400;500;700&display=swap');
+
+html {
+  overflow-x: hidden;
+}
 
 h1 {
   font-weight: 500;
@@ -146,7 +150,7 @@ p {
 }
 
 .talent::after {
-  content: "";
+  content: '';
   position: absolute;
   top: -50%;
   left: 0;
@@ -167,6 +171,7 @@ p {
   height: 640px;
   background: #fdf3f0;
   border-radius: var(--Border-Radius);
+  overflow: hidden;
 }
 
 .talent-info-container {
@@ -229,7 +234,7 @@ p {
 
   .about-hero-container::after {
     position: absolute;
-    content: "";
+    content: '';
     top: 0;
     left: -10%;
     width: 100%;
