--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -96,9 +96,9 @@
   display: flex;
   width: 100%;
   justify-content: space-between;
-  padding: 20px 10px;
+  padding: 10px;
   border-bottom: 1px solid white;
-  height: 45px;
+  height: 40px;
   align-items: center;
   overflow: hidden;
   padding-top: 0;
