--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -108,7 +108,7 @@
   display: flex;
   width: 100%;
   justify-content: space-between;
-  padding: 20px 10px;
+  padding: 10px;
   border-bottom: 1px solid white;
   height: 102px;
   align-items: flex-start;
@@ -122,7 +122,7 @@ textarea {
 }
 
 .error-Info {
-  width: 150px;
+  width: 200px;
   display: flex;
   align-items: center;
   justify-content: space-between;
